<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@id/signInActivityParentView">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@id/forDonors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingBottom="8dp"
            android:paddingStart="24dp"
            android:paddingTop="8dp"
            android:text="@string/forDonors"
            android:textColor="@color/signInActivityHeader"
            android:textSize="@dimen/signInActivityHeaderSize"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayoutFirstParent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:divider="?android:attr/dividerVertical"
            android:orientation="horizontal"
            android:showDividers="middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forDonors">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="14" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:baselineAligned="false"
                    android:divider="?android:attr/dividerVertical"
                    android:orientation="horizontal"
                    android:showDividers="middle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:paddingStart="12dp"
                        android:text="@string/aidsCheck"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/signInActivityTextSize" />

                    <Switch
                        android:id="@id/switchAIDS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="6" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="12dp"
                    android:baselineAligned="false"
                    android:divider="?android:attr/dividerVertical"
                    android:orientation="horizontal"
                    android:showDividers="middle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:paddingStart="12dp"
                        android:text="@string/hepatitisCheck"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/signInActivityTextSize" />

                    <Switch
                        android:id="@id/switchHepatitis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="6" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="12dp"
                    android:baselineAligned="false"
                    android:divider="?android:attr/dividerVertical"
                    android:orientation="horizontal"
                    android:showDividers="middle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:paddingStart="12dp"
                        android:text="@string/alcoholCheck"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/signInActivityTextSize" />

                    <Switch
                        android:id="@id/switchAlcohol"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="6" />
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSecondParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutFirstParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eligibilityInfoForUser"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/eligibilityInfoForUserTextSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="?attr/selectableItemBackground"
                android:baselineAligned="false"
                android:clickable="true"
                android:onClick="launchMoreCriteriaDialog"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:paddingStart="12dp"
                    android:text="@string/moreEligibilityCriteria"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/eligibilityInfoForUserTextSize" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="2.5"
                    android:src="@drawable/ic_more_criteria" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@id/askForBlood"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:paddingBottom="8dp"
            android:paddingStart="24dp"
            android:paddingTop="8dp"
            android:text="@string/askForBlood"
            android:textColor="@color/signInActivityHeader"
            android:textSize="@dimen/signInActivityHeaderSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutSecondParent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/askForBlood">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="32dp"
                android:paddingEnd="8dp"
                android:text="@string/askForBloodWhichGroupPrefix"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/signInActivityTextSize" />

            <Spinner
                android:id="@id/signInBloodGroupSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/askForBloodWhichGroupSuffix"
                android:textSize="@dimen/signInActivityTextSize"
                android:textColor="@color/primaryText"/>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:foreground="@drawable/button_gradient"
            android:background="?android:attr/selectableItemBackground"
            android:text="I Need Blood"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/iNeedBloodTextSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            android:onClick="startProcess"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>